--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Links da Reunião do Sacerdócio</title>
   <meta name="keywords" content="Conferencias Estaca Iguaçu" />
-  <meta name="description" content="Transmissão Conferencias Estaca Iguaçu" />
+  <meta name="description" content="Transmissão Conferencias da Estaca Iguaçu" />
   <meta name="copyright" content="©Código aberto" />
   <meta name="author" content="Luiz Abreu - forked from Mick Hill" />
   <meta name="contact" content="estacaiguacu@gmail.com" />
@@ -24,15 +24,15 @@
     <div class="bg-img"></div>
 
     <main id="container-countdown" class="px-3">
-      <h1>Reunião do Sacerdócio</h1>
+      <h1>Conferência da Estaca Iguaçu</h1>
       <h3>Estaca Iguaçu</h3>
-      <p>Domingo, 11 de Julho de 2021 as 18h!</p>
+      <p>Domingo, 10 de Outubro de 2021 às 10h!</p>
       <br />
       <div id="countdown"></div>
       <br />
       <p id="note"></p>
       <p>
-        <a class="btn btn-custom" target="_blank" href="https://forms.gle/tu79VLUspRuAEhAt7">Presença</a>
+        <a class="btn btn-custom" target="_blank" href="https://forms.gle/oNPqJ37DGLoEkMgx7">Presença</a>
         <a class="btn btn-custom" target="_blank" href="https://zoom.us/j/6405100049?pwd=L2ptbklEeEtLR29xME9HTWluK09xZz09">Zoom</a>
         <a class="btn btn-custom" target="_blank" href="https://www.facebook.com/Estaca-Igua%C3%A7u-806665342709463/">Facebook - Estaca Iguaçu</a>
       </p>
